force-app/main/default/objects/PDI_Write_up__c/PDI_Write_up__c.object-meta.xml
<CustomObject>
    <label>PDI Write-up</label>
    <nameField>
        <displayFormat>Ref# {0}</displayFormat>
        <label>PDI Write-up</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDI Write-ups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>