force-app/main/default/objects/PDI_Write_up__c/fields/Build_Station__c.field-meta.xml
<CustomField>
    <fullName>Build_Station__c</fullName>
    <label>Build Station</label>
    <length>10</length>
    <type>Text</type>
</CustomField>