force-app/main/default/objects/PDI_Write_up__c/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <label>Corrective Action</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>