force-app/main/default/objects/PDI_Write_up__c/fields/Corrective_Action_Date__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Date__c</fullName>
    <description>Date that the corrective action was implemented on the first chassis</description>
    <label>Corrective Action Date</label>
    <type>Date</type>
</CustomField>