force-app/main/default/objects/PDI_Write_up__c/fields/Corrective_Action_First_Bus__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_First_Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corrective Action First Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>PDI Write-ups</relationshipLabel>
    <relationshipName>PDI_Write_ups</relationshipName>
    <type>Lookup</type>
</CustomField>