force-app/main/default/objects/PDI_Write_up__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <formula>PDI_Unit__r.Bus__r.Delivered_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>