force-app/main/default/objects/PDI_Write_up__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>03 - Electrical</fullName>
            </value>
            <value>
                <fullName>04 - Chassis</fullName>
            </value>
            <value>
                <fullName>05a - Roof</fullName>
            </value>
            <value>
                <fullName>05b - Unibody</fullName>
            </value>
            <value>
                <fullName>06 - Body</fullName>
            </value>
            <value>
                <fullName>07 - Paint</fullName>
            </value>
            <value>
                <fullName>08a - Trim</fullName>
            </value>
            <value>
                <fullName>08b - Trim</fullName>
            </value>
            <value>
                <fullName>09 - Rack</fullName>
            </value>
            <value>
                <fullName>11 - Final</fullName>
            </value>
            <value>
                <fullName>RR - Ready Row</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>