force-app/main/default/objects/PDI_Write_up__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other Category Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>