force-app/main/default/objects/PDI_Write_up__c/fields/Other_Category__c.field-meta.xml
<CustomField>
    <fullName>Other_Category__c</fullName>
    <label>Other Category</label>
    <type>TextArea</type>
</CustomField>