force-app/main/default/objects/PDI_Write_up__c/fields/PDI_Main_Category__c.field-meta.xml
<CustomField>
    <fullName>PDI_Main_Category__c</fullName>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AIR CONDITIONING</fullName>
            </value>
            <value>
                <fullName>BODY</fullName>
            </value>
            <value>
                <fullName>CHASSIS</fullName>
            </value>
            <value>
                <fullName>DASH PANEL &amp; GUAGE</fullName>
            </value>
            <value>
                <fullName>DESTINATION SIGN</fullName>
            </value>
            <value>
                <fullName>DRIVELINE</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL</fullName>
            </value>
            <value>
                <fullName>ENGINE</fullName>
            </value>
            <value>
                <fullName>EXTERIOR TRIM</fullName>
            </value>
            <value>
                <fullName>FIRE</fullName>
            </value>
            <value>
                <fullName>FRONT AXLE</fullName>
            </value>
            <value>
                <fullName>FRONT SUSPENSION</fullName>
            </value>
            <value>
                <fullName>FUEL</fullName>
            </value>
            <value>
                <fullName>HEATER</fullName>
            </value>
            <value>
                <fullName>INTERIOR TRIM</fullName>
            </value>
            <value>
                <fullName>PAINT &amp; DECAL</fullName>
            </value>
            <value>
                <fullName>PIPING</fullName>
            </value>
            <value>
                <fullName>RAMP</fullName>
            </value>
            <value>
                <fullName>REAR AXLE</fullName>
            </value>
            <value>
                <fullName>REAR SUSPENSION</fullName>
            </value>
            <value>
                <fullName>SAFETY &amp; ROAD EQUIPMENT</fullName>
            </value>
            <value>
                <fullName>STEERING</fullName>
            </value>
            <value>
                <fullName>TRANSMISSION</fullName>
            </value>
            <value>
                <fullName>WHEEL &amp; TIRE</fullName>
            </value>
            <value>
                <fullName>WINDOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>