force-app/main/default/objects/PDI_Write_up__c/fields/PDI_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>PDI_Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PDI_Main_Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2-WAY RADIO MTG BRKT</fullName>
            </value>
            <value>
                <fullName>ABS EFFECTS</fullName>
            </value>
            <value>
                <fullName>ABS SENSOR</fullName>
            </value>
            <value>
                <fullName>ACCUMULATOR</fullName>
            </value>
            <value>
                <fullName>AD FRAMES EXTERIOR</fullName>
            </value>
            <value>
                <fullName>AD FRAMES INTERIOR</fullName>
            </value>
            <value>
                <fullName>AIR APPL. GA (OBS)</fullName>
            </value>
            <value>
                <fullName>AIR BAGS</fullName>
            </value>
            <value>
                <fullName>AIR CLEANER</fullName>
            </value>
            <value>
                <fullName>AIR COMPRESSOR</fullName>
            </value>
            <value>
                <fullName>AIR COND. EVAP COOLER</fullName>
            </value>
            <value>
                <fullName>AIR CONDITION EVAP MOTOR</fullName>
            </value>
            <value>
                <fullName>AIR CONDITIONING COND. MOTOR</fullName>
            </value>
            <value>
                <fullName>AIR CONDITIONING CONDENSER</fullName>
            </value>
            <value>
                <fullName>AIR COND PIPING/DRAIN</fullName>
            </value>
            <value>
                <fullName>AIR DRYER/MTG</fullName>
            </value>
            <value>
                <fullName>AIR HORN (OBS)</fullName>
            </value>
            <value>
                <fullName>AIR INTAKE PIPING</fullName>
            </value>
            <value>
                <fullName>AIR PRESS. GA</fullName>
            </value>
            <value>
                <fullName>AIR STARTER</fullName>
            </value>
            <value>
                <fullName>AIR STARTER MTG</fullName>
            </value>
            <value>
                <fullName>AIR STARTER TANK CHRGNG LINE</fullName>
            </value>
            <value>
                <fullName>AIR TANK DRAIN</fullName>
            </value>
            <value>
                <fullName>AIR TANK MTG</fullName>
            </value>
            <value>
                <fullName>AISLE LIGHTING, SEAT RISER</fullName>
            </value>
            <value>
                <fullName>ALTERNATOR</fullName>
            </value>
            <value>
                <fullName>ALTERNATOR/REG DUAL WIRING</fullName>
            </value>
            <value>
                <fullName>ALTERNATOR MTG</fullName>
            </value>
            <value>
                <fullName>ALTERNATOR PULLEY</fullName>
            </value>
            <value>
                <fullName>AMP METER GA. (OBS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>