force-app/main/default/objects/PDI_Write_up__c/fields/PDI_Unit__c.field-meta.xml
<CustomField>
    <fullName>PDI_Unit__c</fullName>
    <label>PDI Unit</label>
    <referenceTo>PDI_Unit__c</referenceTo>
    <relationshipLabel>PDI Write-ups</relationshipLabel>
    <relationshipName>PDI_Write_ups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>