force-app/main/default/objects/PDI_Write_up__c/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <label>Repair</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>