force-app/main/default/objects/PDI_Write_up__c/fields/RepBy__c.field-meta.xml
<CustomField>
    <fullName>RepBy__c</fullName>
    <label>ReportedBy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FSR</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>