force-app/main/default/objects/PDI_Write_up__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>TextArea</type>
</CustomField>