force-app/main/default/objects/PDI_Write_up__c/fields/Write_Up__c.field-meta.xml
<CustomField>
    <fullName>Write_Up__c</fullName>
    <label>Write-Up</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>