force-app/main/default/objects/PDI_Write_up__c/validationRules/SalesOrder_Corrective_Action.validationRule-meta.xml
<ValidationRule>
    <fullName>SalesOrder_Corrective_Action</fullName>
    <active>true</active>
    <description>Compares the Sales Order on the Corrective Action bus to the PDI Unit&apos;s Sales Order to validate that they are from the same build</description>
    <errorConditionFormula>PDI_Unit__r.Sales_Order__c = Corrective_Action_First_Bus__r.Sales_Order__c</errorConditionFormula>
    <errorDisplayField>Corrective_Action_First_Bus__c</errorDisplayField>
    <errorMessage>The Corrective Action First Unit must be from the same Sales Order as the PDI Unit</errorMessage>
</ValidationRule>